# DF1_library

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
fixtures/: auth_data.json  libr_data.json  users_data.json
libr/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
libr/migrations/: 0001_initial.py  0002_alter_reading_start_date.py  0003_alter_book_authors_alter_reading_start_date.py
users/: models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
